--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "tiktok-watch-together",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "description": "Real-time synchronized TikTok video watching with friends",
+  "author": "Hazy142",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "server": "node server/index.js",
+    "server:dev": "nodemon --exec node server/index.js",
+    "start": "npm run build && npm run server",
+    "lint": "tsc --noEmit"
   },
   "dependencies": {
     "express": "^5.2.1",
@@ -19,7 +26,10 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "nodemon": "^3.1.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
