--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -16,9 +16,16 @@
   ],
   "content_scripts": [
     {
-      "matches": ["https://www.tiktok.com/*"],
-      "js": ["socket.io.min.js", "content.js"],
-      "css": ["style.css"],
+      "matches": [
+        "https://www.tiktok.com/*"
+      ],
+      "js": [
+        "socket.io.min.js",
+        "content.js"
+      ],
+      "css": [
+        "style.css"
+      ],
       "run_at": "document_end"
     }
   ],
@@ -28,10 +35,5 @@
   "action": {
     "default_popup": "popup.html",
     "default_title": "TikTok Watch Together"
-  },
-  "icons": {
-    "16": "icons/icon-16.png",
-    "48": "icons/icon-48.png",
-    "128": "icons/icon-128.png"
   }
 }
